Fixes status bar spinner clipping

--- a/src/webviews/apps/plus/graph/graph.scss
+++ b/src/webviews/apps/plus/graph/graph.scss
@@ -55,6 +55,7 @@ a {
 		top: 1px;
 		left: 0.5rem;
 		font-size: 1.2rem;
+		margin-right: 1rem; // adds "padding" to stop the overflow from clipping the spin
 	}
 
 	a {
